--- a/src/components/main.css
+++ b/src/components/main.css
@@ -3,8 +3,9 @@
 .banner{
 
     text-align: center;
+    display: flex;
     flex-direction: row;
-    
+     
     justify-content: center;
     padding: 20px;
      border: 10px;
@@ -19,7 +20,7 @@
 
     
     float: center;
-      align-content: space-around;
+      margin-left: 20px;
 
 
 
